# docker-mosquitto

./: .dockerignore  .env.example  .gitignore  CERTIFICATE.md  Dockerfile  LICENSE  MOSQUITTO_DOCS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-to-vps.yml
config/: mosquitto.conf
docker/mosquitto/: Dockerfile  entrypoint.sh  watch.sh
mosquitto_auth/: generate_users_password.py  verify_certificate.py
mosquitto_auth/api/: config.py  create_user.py  dependencies.py  deploy.py  main.py
mosquitto_auth/api/core/: config.py  cors.py  dependencies.py  routes.py
mosquitto_auth/api/models/: ca.py  certificate.py  responses.py  status.py  user.py  users_file.py
mosquitto_auth/api/routers/: ca.py  certificate.py  user.py  users_file.py
mosquitto_auth/broker/: delete_broker_certificate.py  generate_broker_certificate.py  verify_broker_certificate.py
mosquitto_auth/ca/: delete_ca.py  generate_ca.py  verify_ca.py
mosquitto_auth/client/: MosquittoUserManager.py  generate_users_certificate.py  generate_users_password.py  generate_users_password_file.py  verify_client_certificate.py
mosquitto_auth/client/certificate/: delete_user_certificate.py  generate_users_certificate.py  verify_client_certificate.py
mosquitto_auth/client/scripts/: add_many_users.py  add_user.py  del_user.py  edit_pass.py  gen_pass_file_by_env.py
mosquitto_auth/core/: utils.py
mosquitto_auth/lib/: validators.py
tests/: api_create_user.http  mqtt_client.py
tests/api/: api_create_user.http  route_users.http  users-file.http  users.http
