[tool.poetry]
name = "mosquitto-auth"
version = "0.1.0"
description = "Generate password for mosquitto"
authors = ["Anderson <andersonlimacrv@gmail.com>"]
packages = [
    { include = "mosquitto_auth" }
]

[tool.poetry.dependencies]
python = "^3.12"
passlib = "^1.7.4"
python-dotenv = "^1.1.0"
paho-mqtt = "^2.1.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic-settings = "^2.10.0"

[tool.poetry.scripts]
generate-cert = "mosquitto_auth.client.generate_users_certificate:main"
generate-ca = "mosquitto_auth.ca.generate_ca:main"
generate-broker-cert = "mosquitto_auth.broker.generate_broker_certificate:main"
verify-broker-cert = "mosquitto_auth.broker.verify_broker_certificate:main"
verify-client-cert = "mosquitto_auth.client.certificate.verify_client_certificate:main"
test-mqtt = "tests.mqtt_client:test_mqtt_connection"
test-passwords = "tests.mqtt_client:test_password_generation"

generate-pass-file-by-env = "mosquitto_auth.client.scripts.gen_pass_file_by_env:main"
add-user = "mosquitto_auth.client.scripts.add_user:main"
edit-pass = "mosquitto_auth.client.scripts.edit_pass:main"
del-user = "mosquitto_auth.client.scripts.del_user:main"
add-many-users = "mosquitto_auth.client.scripts.add_many_users:main"

start = "mosquitto_auth.api.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
